--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body {
   background: #f2f2f2;
+  line-height: 1.5em;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 body > * {
@@ -165,28 +166,45 @@ footer .container {
   background-image: url(/laufschuhe-herren.jpg);
 }
 
+.imprint {
+  margin: 20px auto;
+}
+address {
+  font-style: normal;
+}
+dt {
+  color:#555;
+}
+dt::after {
+  /*content: ":";*/
+}
+dd {
+  margin-left: 0;
+  margin-bottom: .75em;
+}
+
 footer {
+  font-size: .85em;
+  line-height: 1.5em;
   margin-top: 20px;
   padding-bottom: 100px;
+  color: #999;
 }
 footer .container {
   /*grid-template-columns: 1fr 1fr  1fr 1fr;*/
   grid-template-columns: repeat(4, 1fr);
 }
-
-footer .logo {
-}
-footer .links {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-footer .links  {
-}
 footer .copyright {
-  grid-column: 3 / span 2;
+  grid-column: 2 / span 2;
+  text-align: center;
 }
-
+footer a {
+  color: #555;
+  text-decoration: none;
+}
+footer a:hover {
+  color: #111;
+}
 
 @media (max-width: 1020px) {
   .brands {
